@@ -30,6 +30,7 @@ Build-Depends: debhelper (>= 10~),
  libfuse-dev (>= 2.8.4-1.4) [linux-any kfreebsd-any],
  fonts-dejavu-core,
  liblzma-dev,
+ liblzo2-dev,
  dosfstools [any-i386 any-amd64 any-arm64],
  mtools [any-i386 any-amd64 any-arm64],
  wamerican,
@@ -77,6 +78,7 @@ Description: GRand Unified Bootloader, version 2 (dummy package)
 
 Package: grub-common
 Architecture: any
+Built-Using: ${Built-Using}
 Depends: ${shlibs:Depends}, ${misc:Depends}, gettext-base, ${lsb-base-depends}
 Replaces: grub-pc (<< 2.00-4), grub-ieee1275 (<< 2.00-4), grub-efi (<< 1.99-1), grub-coreboot (<< 2.00-4), grub-linuxbios (<< 1.96+20080831-1), grub-efi-ia32 (<< 2.00-4), grub-efi-amd64 (<< 2.00-4), grub-efi-ia64 (<< 2.00-4), grub-yeeloong (<< 2.00-4), init-select
 Recommends: os-prober (>= 1.33)
